--- a/AppIFES/Views/Agenda/Edit.cshtml
+++ b/AppIFES/Views/Agenda/Edit.cshtml
@@ -28,8 +28,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.dataevento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.dataevento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.dataevento, new { htmlAttributes = new { @class = "form-control"  } })
                 @Html.ValidationMessageFor(model => model.dataevento, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.hora, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.hora, new { htmlAttributes = new { @class = "form-control"} })
+                @Html.ValidationMessageFor(model => model.hora, "", new { @class = "text-danger" })
             </div>
         </div>
 
